# chat-app

./: Cargo.toml  README.md
chat-gtk/: Cargo.toml
chat-gtk/src/: main.rs  server_api.rs
chat-server/: .env  Cargo.toml
chat-server/migrations/2020-04-22-171529_create_user/: up.sql
chat-server/migrations/2020-04-25-171537_create_messages/: up.sql
chat-server/src/: auth.rs  lib.rs  main.rs  schema.rs
chat-server/src/message/: message_controller.rs  message_model.rs  message_repo.rs  mod.rs
chat-server/src/user/: mod.rs  user_controller.rs  user_model.rs  user_repo.rs
