[package]
name = "chat-gtk"
version = "0.1.0"
authors = ["chetan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json", "blocking"]}
chat-server = { path = "../chat-server", package = "chat-server" }
text_io = "0.1.8"
