[package]
name = "chat-server"
version = "0.1.0"
authors = ["chetan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = { version = "1.4.4", features = ["mysql"]}
dotenv = "0.15.0"
serde = {version = "1.0.106", features = ["derive"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"

[dependencies.rocket_contrib]
version = "0.4.4"
# defalt-features = false
# features = ["diesel_mysql_pool"]
